--- a/SL One trip search/Base.lproj/Main.storyboard
+++ b/SL One trip search/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="P9b-UC-ffO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="P9b-UC-ffO">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -95,7 +95,7 @@
                                     <constraint firstItem="4to-wh-gCG" firstAttribute="height" secondItem="w1R-oF-tAw" secondAttribute="height" id="jFE-lI-Kmt"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mbs-P1-Vao">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mbs-P1-Vao">
                                 <rect key="frame" x="0.0" y="328.66666666666674" width="375" height="449.33333333333326"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -161,6 +161,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="434.39999999999998" y="72.413793103448285"/>
+        </scene>
+        <!--Journey Detail View Controller-->
+        <scene sceneID="wOG-4L-i8j">
+            <objects>
+                <viewController storyboardIdentifier="JourneyDetailViewController" id="fIk-21-iGA" customClass="JourneyDetailViewController" customModule="SL_One_trip_search" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aEZ-Gp-dwO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="115" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="amY-FU-5gC">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Wrj-mJ-ZMR" firstAttribute="trailing" secondItem="amY-FU-5gC" secondAttribute="trailing" id="0j4-GZ-UA5"/>
+                            <constraint firstItem="Wrj-mJ-ZMR" firstAttribute="bottom" secondItem="amY-FU-5gC" secondAttribute="bottom" id="9w8-Qu-KKG"/>
+                            <constraint firstItem="amY-FU-5gC" firstAttribute="leading" secondItem="Wrj-mJ-ZMR" secondAttribute="leading" id="BgS-wd-QPj"/>
+                            <constraint firstItem="amY-FU-5gC" firstAttribute="top" secondItem="Wrj-mJ-ZMR" secondAttribute="top" id="e6v-cr-nF8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Wrj-mJ-ZMR"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="amY-FU-5gC" id="x8P-ce-8D3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TlQ-VN-is5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="434" y="754"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="p3D-E0-Hg8">
